--- a/_config.yml
+++ b/_config.yml
@@ -3,18 +3,17 @@
 #
 
 # Name of your site (displayed in the header)
-name: Tirrilee
+name: MoonLife
 
 # Short bio or description (displayed in the header)
-description: 티릴리 기술 블로그
+description: MoonLife 기술 블로그
 
 #
 # Flags below are optional
 #
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
-avatar: https://github.com/Tirrilee/tirrilee.github.io/blob/master/images/logo.png?raw=true
-
+avatar: https://github.com/MoonLifeDev/MoonLifeDev.github.io/tree/master/images/logo.png?raw=true
 
 # Tabs in header. There are 'Blog', 'About', 'Archive', 'Tags'
 # and URL Link(e.g. 'Theme' tab below) tabs. If you don't need one, just delete
@@ -36,8 +35,8 @@ paginate: 5
 footer-links:
   behance: # https://www.behance.net/<username>
   dribbble:
-  email: wkddnjset@gmail.com
-  facebook: 
+  email: moonlife.jangwon@gmail.com
+  facebook:
   flickr:
   github:
   googleplus: # anything in your profile username that comes after plus.google.com/
@@ -47,11 +46,11 @@ footer-links:
   rss: # just type anything here for a working RSS icon
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
   tumblr: # https://<username>.tumblr.com
-  twitter: 
+  twitter:
   youtube: # channel/<your_long_string> or user/<user-name>
 
 # Text under the icons in footer
-footer-text: © 2019 Tirrilee. All Right Reserved
+footer-text: © 2020 MoonLife. All Right Reserved
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
 # You can find your shortname on the Settings page of your Disqus account
@@ -88,7 +87,7 @@ kramdown:
   syntax_highlighter: rouge
   syntax_highlighter_opts:
     # Use existing pygments syntax highlighting css
-    css_class: 'highlight'
+    css_class: "highlight"
 
 # Set the Sass partials directory, as we're using @imports
 sass:
